# Apolo-11

./: LICENSE  README.md
Apolo-11/: a.py  pyproject.toml  setup.cfg
Apolo-11/apolo_11/: Apolo-11.py  Simulacion.py  apolo_11.py  funciones.py  setup.cfg
Apolo-11/apolo_11/Clases/: Archivo.py  Dispositivo.py  Mision.py  reporte.py  tipo_dispositivo.py
Apolo-11/tests/: conftest.py
Apolo-11/tests/pruebas/: archivo.py  dispositivo.py  mision.py
