[tool.poetry]
name = "apolo-11"
version = "0.1.0"
description = ""
authors = ["LeidyDucuara <ducuara.leidy@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"
pynput = "^1.7.6"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
